Fixed issue with YinYang size on medium screens // View alignment of View xxx Buttons on Home page // Changed purple wrapper backgrounds to a greyish color #372c38; about text widht

--- a/eddietaliaferro.com/src/app/components/home-illustration-two/home-illustration-two.component.scss
+++ b/eddietaliaferro.com/src/app/components/home-illustration-two/home-illustration-two.component.scss
@@ -1,18 +1,11 @@
-@media only screen and (max-width: 450px) {
-  svg {
-    height: 90%;
-    width: 90%;
-    margin: 0 auto;
-  }
-}
 @media only screen and (max-width: 850px) {
   svg {
-    height: 70%;
-    width: 70%;
+    height: 60%;
+    width: 60%;
     margin: 0 auto;
   }
 }
-@media only screen and (min-width: 1050px) {
+@media only screen and (min-width: 850px) {
   svg {
     height: 40%;
     width: 40%;
