--- a/eddietaliaferro.com/src/app/pages/about/about.page.scss
+++ b/eddietaliaferro.com/src/app/pages/about/about.page.scss
@@ -56,7 +56,7 @@ b {
   border-radius: 5px;
 }
 #about-me {
-  background: linear-gradient(118deg, rgba(50,5,52,1) 1%, rgb(48 7 55 / 50%) 25%, rgba(50,5,52,1) 50%, rgb(38 7 42 / 50%) 75%, rgba(50,5,52,1) 100%);;
+  background: #372c38;
   font-size: 16px;
   line-height: 28px;
   padding: 2em;
