--- a/eddietaliaferro.com/src/app/pages/blog/blog-page/blog-page.page.scss
+++ b/eddietaliaferro.com/src/app/pages/blog/blog-page/blog-page.page.scss
@@ -140,7 +140,7 @@ ion-fab {
   border-radius: 5px;
 }
 .comment-wrapper {
-  background: linear-gradient(45deg, #320534, #150018);
+  background: #372c38;
   background-attachment: fixed;
   padding: 2em;
   margin: 2em auto;
