--- a/eddietaliaferro.com/src/app/pages/home/home.page.scss
+++ b/eddietaliaferro.com/src/app/pages/home/home.page.scss
@@ -105,7 +105,7 @@
 
 }
 .service-card {
-  background: linear-gradient(118deg, rgba(50,5,52,1) 1%, rgb(48 7 55 / 50%) 25%, rgba(50,5,52,1) 50%, rgb(38 7 42 / 50%) 75%, rgba(50,5,52,1) 100%);
+  background: #372c38;
   background-attachment: fixed;
   min-height: 600px;
   margin: 2em auto;
@@ -261,7 +261,7 @@
 }
 .blog-post {
   height: auto;
-  background: linear-gradient(118deg, rgba(50,5,52,1) 1%, rgb(48 7 55 / 50%) 25%, rgba(50,5,52,1) 50%, rgb(38 7 42 / 50%) 75%, rgba(50,5,52,1) 100%);
+  background: #372c38;
   background-attachment: fixed;
   box-shadow: 1px 1px 13px #00000094;
   padding: 25px;
@@ -371,7 +371,7 @@
 }
 .project-post {
   height: auto;
-  background: linear-gradient(118deg, rgba(50,5,52,1) 1%, rgb(48 7 55 / 50%) 25%, rgba(50,5,52,1) 50%, rgb(38 7 42 / 50%) 75%, rgba(50,5,52,1) 100%);
+  background: #372c38;
   background-attachment: fixed;
   box-shadow: 1px 1px 13px #00000094;
   padding: 25px;
